# user_profiles

./: Readme.md  pyproject.toml  requirements.txt
profiles/: models.py  serializers.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
user_profiles/: asgi.py  settings.py  urls.py  wsgi.py
